# iris

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  WINDSURF.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  metric.yml  tech-debt.yml
.github/workflows/: check-analysis-chain.yml  ci.yml  deploy-platform.yml  release.yml
.husky/: post-commit  pre-commit  prepare-commit-msg
docs/: COMPETITIVE-LANDSCAPE.md  DECISIONS.md  KNOWLEDGE-PRIMING-RESEARCH.md  METHODOLOGY.md  METRICS.md  ONE-PAGER.md  PLAN-datadog.md  PRINCIPLES.md  READING-GUIDE.md  TELEMETRY.md  VISION.md
docs/guides/: ai-attribution-policy.md
docs/integrations/: datadog.md
examples/: sample-org-findings.md  sample-report.md
iris/: cli.py  i18n.py  org_runner.py
iris/analysis/: acceptance_rate.py  activity_timeline.py  adoption_detector.py  attribution_gap.py  author_velocity.py  cascade_detector.py  churn_calculator.py  churn_detail.py  code_provenance.py  commit_shape.py  dora_real.py  (+23 more)
platform/: .gitignore  CLAUDE.md  VERCEL.md  env.example  eslint.config.mjs  next.config.ts  openapi.yaml  package-lock.json  package.json  vercel.json  vitest.config.ts
scripts/: check_analysis_chain.py  datadog_dora_probe.py
tests/: test_dora_real.py  test_fix_targeting.py  test_flow_efficiency.py  test_flow_load.py  test_github_reader_state.py  test_incident_proxy.py  test_open_pr_aging.py  test_origin_classifier_bots.py  test_pr_insights.py  test_revert_detector.py  test_tool_segmentation.py
(+283 files in other folders)
